[metadata]
name = soundbrick
version = 0.0.6
description = A simple sound file viewer like a brickwork
long_description = file:README.md
long_description_content_type = text/markdown
author = cygkichi
license = MIT
license_file = LICENSE
url = https://github.com/cygkichi/soundbrick
python_requires >= 3.6

